# django-payments-saferpay

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test-and-release.yml  test.yml
django_payments_saferpay/: facade.py  models.py  provider.py  version.py
sandbox/: manage.py
sandbox/example_app/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
sandbox/example_app/migrations/: 0001_initial.py
sandbox/example_app/templates/: payment.html
src/django_payments_saferpay/: facade.py  version.py
tests/: django_settings.py  test_facade.py  test_provider.py
tests/test_app/: models.py
